# autorealm

./: .gitignore  CMakeLists.txt  Readme-CMake  autorealm.workspace  autorealm_GUI.cbp  autorealm_GUIApp.cpp  autorealm_GUIApp.h  autorealm_GUIMain.cpp  autorealm_GUIMain.h  check_cccc.sh  wx_pch.h
config/: autorealm.cfg
config/autorealm/: config
config/plugins/: line.cfg  polyline.cfg
doc/: Doxyfile  class_diagram.dia  renderEngine.dia
doc/html/: _app_8cpp.html  _app_8cpp.js  _app_8cpp__incl.map  _app_8cpp__incl.md5  _app_8h.html  _app_8h__dep__incl.map  _app_8h__dep__incl.md5  _app_8h__incl.md5  _app_8h_source.html  _color_8h.html  _color_8h__dep__incl.map  _color_8h__dep__incl.md5  _color_8h_source.html  _connector_8cpp.html  _connector_8cpp.js  _connector_8cpp__incl.map  _connector_8cpp__incl.md5  _curve_8cpp.html  _curve_8cpp__incl.map  _curve_8cpp__incl.md5  _curve_8h.html  _curve_8h__dep__incl.map  _curve_8h__dep__incl.md5  _curve_8h__incl.md5  _curve_8h_source.html  _drawing_tool_8cpp.html  _drawing_tool_8cpp__incl.map  _drawing_tool_8cpp__incl.md5  _drawing_tool_8h.html  _drawing_tool_8h__dep__incl.map  _drawing_tool_8h__dep__incl.md5  _drawing_tool_8h__incl.map  _drawing_tool_8h__incl.md5  _drawing_tool_8h_source.html  _fractal_8cpp.html  (+341 more)
graphics/: color.cpp  color.h  customglpane.cpp  customglpane.h  d3point.cpp  d3point.h  form.cpp  form.h  group.cpp  group.h  object.cpp  object.h
src/: CMakeLists.txt  TODO  aboutRender.txt  autorealm.cbp  menuEngine.cbp  pluginEngine.cbp  renderEngine.cbp  unimplemented.h
wxsmith/: autorealm_GUIframe.wxs
(+316 files in other folders)
