CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(AutoREALM)

ENABLE_LANGUAGE(CXX)

set(Pluma_LIBRARY /usr/lib/libpluma.so)

FIND_PACKAGE(wxWidgets REQUIRED base core adv gl aui)
INCLUDE(${wxWidgets_USE_FILE})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

SET(SRC "${CMAKE_SOURCE_DIR}/src")
INCLUDE_DIRECTORIES(${SRC})
SUBDIRS(${SRC})

SET(EXECUTABLE_OUTPUT_PATH
	${CMAKE_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH
	${CMAKE_SOURCE_DIR}/bin)
